--- a/main.html
+++ b/main.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Book Library</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div class="book-library">
+        <div class="book">
+            <img src="https://www.dropbox.com/s/qx0rpl5h3gi6l5o/spy-in-the-amber.jpg?raw=1" alt="Spy in the Amber">
+            <h2>Spy in the Amber</h2>
+            <p class="author">Manohar Malgonkar</p>
+            <div class="price">₹299</div>
+        </div>
 
+        <div class="book">
+            <img src="https://www.dropbox.com/s/d8b6s7j3tzvzw93/sacred-games.jpg?raw=1" alt="Sacred Games">
+            <h2>Sacred Games</h2>
+            <p class="author">Vikram Chandra</p>
+            <div class="price">₹399</div>
+        </div>
+
+        <div class="book">
+            <img src="https://www.dropbox.com/s/csj8a55gu8vaoby/byomkesh-bakshi.jpg?raw=1" alt="Byomkesh Bakshi">
+            <h2>Byomkesh Bakshi</h2>
+            <p class="author">Sharadindu Bandyopadhyay</p>
+            <div class="price">₹249</div>
+        </div>
+    </div>
 </body>
-
 </html>
